--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@ryangjchandler/spruce": "^2.4.0",
     "alpinejs": "^2.8.0",
     "bulma": "^0.9.1",
-    "js-datepicker": "^5.16.0",
-    "notyf": "^3.9.0",
     "codemirror": "^5.58.3",
     "feather-icons": "^4.24.0",
     "ionicons": "^5.2.3",
+    "js-datepicker": "^5.16.0",
+    "notyf": "^3.9.0",
     "plyr": "^3.5.6",
     "postcss": "^8.1.6",
     "simplebar": "^5.2.1"
@@ -42,7 +42,6 @@
     "ini": "1.3.6",
     "log-symbols": "^4.0.0",
     "node-bourbon": "^4.2.8",
-    "npm-force-resolutions": "0.0.3",
     "panini": "^1.7.1",
     "sass": "^1.30.0",
     "vinyl-source-stream": "^2.0.0"
@@ -53,8 +52,7 @@
   "scripts": {
     "dev": "gulp",
     "build": "gulp prod",
-    "prod": "gulp prod",
-    "preinstall": "npx npm-force-resolutions"
+    "prod": "gulp prod"
   },
   "repository": {
     "type": "git",
