--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "codemirror": "^5.58.3",
     "feather-icons": "^4.24.0",
     "ionicons": "^5.2.3",
-    "js-datepicker": "^5.16.0",
-    "notyf": "^3.9.0",
     "plyr": "^3.5.6",
     "postcss": "^8.1.6",
     "simplebar": "^5.2.1"
@@ -66,7 +64,7 @@
     "sass"
   ],
   "author": "NodeFactoryIo",
-  "license": "Commercial",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/"
   },
