--- a/package.json
+++ b/package.json
@@ -1,8 +1,29 @@
 {
-  "name": "Vedran-landing",
+  "name": "vedran-landing",
   "version": "0.1.0",
   "description": "Vedran landing page",
   "main": "gulpfile.js",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NodeFactoryIo/vedran-landing"
+  },
+  "keywords": [
+    "vedran",
+    "polkadot",
+    "substrate",
+    "loadbalancer",
+    "appi"
+  ],
+  "bugs": {
+    "url": "https://github.com/NodeFactoryIo/vedran-landing"
+  },
+  "homepage": "https://github.com/NodeFactoryIo/vedran-landing",
+  "scripts": {
+    "dev": "gulp",
+    "build": "gulp prod",
+    "prod": "gulp prod"
+  },
   "dependencies": {
     "@ryangjchandler/spruce": "^2.4.0",
     "alpinejs": "^2.8.0",
@@ -43,27 +64,5 @@
   },
   "resolutions": {
     "ini": "1.3.6"
-  },
-  "scripts": {
-    "dev": "gulp",
-    "build": "gulp prod",
-    "prod": "gulp prod"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/NodeFactoryIo/vedran-landing"
-  },
-  "keywords": [
-    "gulp",
-    "gulp4",
-    "bulma",
-    "bulmacss",
-    "sass"
-  ],
-  "author": "NodeFactoryIo",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/"
-  },
-  "homepage": "https://github.com/"
+  }
 }
